Fix header and main spacing
Some pages that don't start with headers.

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,6 +1,5 @@
 .wrapper {
   margin-bottom: calc(5vh + var(--spacing));
-  padding-top: calc(var(--spacing-small) * 4);
 }
 
 .content {
