--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -111,6 +111,10 @@ main {
   min-height: 100vh;
 }
 
+main > *:first-child {
+  padding-top: calc(var(--spacing-small) * 4);
+}
+
 a {
   color: var(--grey);
   text-decoration: none;
